outputs.OLD/production-metadata/HEAL-33054/unpackaged/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AHB_Form_Submission_Raw__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AHB Form Submission Raw</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AHB_PreQualification_Form_JSON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AHB PreQualification Form JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Business_Identification_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter your Business Identification / VAT Number. This will be used for reverse charge VAT calculations.</inlineHelpText>
        <label>Business Identification Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Entity_Use_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
        <label>Entity/Use code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Exemption_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you enter any data into this field their sales transactions will be exempt from sales tax.</inlineHelpText>
        <label>Exemption Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_MAPPER__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Seller is responsible for any import taxes and fees.</description>
        <inlineHelpText>If checked, Seller is responsible for any import taxes and fees.</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Customer_Status__c</fullName>
        <description>Displays the AvaTax Exemption customer status.</description>
        <formula>IMAGE(CASE(AVA_SFCLOUD__AvaTax_Message__c,
&quot;Success&quot;, &quot;/img/msg_icons/confirm16.png&quot;,
&quot;Success: Email address is recommended&quot;, &quot;/img/msg_icons/confirm16.png&quot;,
&quot;Update customer to AvaTax Exemption&quot;, &quot;/img/msg_icons/warning16.png&quot;,
&quot;&quot;,&quot;/resource/not_available&quot;,
&quot;Error&quot;,&quot;/img/msg_icons/error16.png&quot;,
&quot;/img/msg_icons/error16.png&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the AvaTax Exemption customer status.</inlineHelpText>
        <label>Sales Cloud AvaTax Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Exemption_Customer_ID__c</fullName>
        <description>An unique ID associated with the customer&apos;s exemption certificate.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>An unique ID associated with the customer&apos;s exemption certificate.</inlineHelpText>
        <label>Sales Cloud Avalara Customer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Message__c</fullName>
        <description>Displays the AvaTax responses or messages.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the AvaTax responses or messages.</inlineHelpText>
        <label>Sales Cloud AvaTax Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Customer_Id_Edit_One_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used within the Apex code only</description>
        <label>Customer_Id_Edit_One_Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Email__c</fullName>
        <description>Primary email for the customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary email for the customer.</inlineHelpText>
        <label>Sales Cloud Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Transport__c</fullName>
        <inlineHelpText>This specifies who is responsible for transport of the goods on the transaction</inlineHelpText>
        <label>Transport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AVA_SFCLOUD__Avalara_Transport</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Credit_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Limit</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Open_Balance__c</fullName>
        <label>QB Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_Customer_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QuickBooks Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sales_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>About_Patient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>About Patient</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountGrading__c</fullName>
        <label>Account Grading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number_Round_Robin__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Account Number Round Robin</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Inactive Request</fullName>
                    <isActive>false</isActive>
                    <label>Inactive Request</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                    <isActive>false</isActive>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Reactivated</fullName>
                    <isActive>false</isActive>
                    <label>Reactivated</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_in_Compliance__c</fullName>
        <label>Account in Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Tests_Offered__c</fullName>
        <label>Additional Tests Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Body composition analysis</fullName>
                </value>
                <value>
                    <fullName>Oligoscan</fullName>
                </value>
                <value>
                    <fullName>Carotid Artery Test w/ Panasonic Cardio</fullName>
                </value>
                <value>
                    <fullName>Heart Rate Variability Testing</fullName>
                </value>
                <value>
                    <fullName>Digital Pulse Analyzer</fullName>
                </value>
                <value>
                    <fullName>BIA - Bioimpedance Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
  MONTH(TODAY())&gt;MONTH(DateOfBirth__c),
  YEAR(TODAY())-YEAR(DateOfBirth__c), 
	IF(AND(MONTH(TODAY()) = MONTH(DateOfBirth__c), DAY(TODAY()) &gt;= DAY(DateOfBirth__c)),
      YEAR(TODAY())-YEAR(DateOfBirth__c),
      (YEAR(TODAY())-YEAR(DateOfBirth__c))-1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SteadyMD</fullName>
                </value>
                <value>
                    <fullName>Guardian MD</fullName>
                </value>
                <value>
                    <fullName>Axion</fullName>
                </value>
                <value>
                    <fullName>Answering Service Care</fullName>
                </value>
                <value>
                    <fullName>10X Health</fullName>
                </value>
                <value>
                    <fullName>OpenLoop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Labs_in_Compliance__c</fullName>
        <label>Annual Labs in Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Physical_in_Compliance__c</fullName>
        <label>Annual Physical in Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atlas_Medical_Record_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Atlas Medical Record Number</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Atlas_Patient_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Atlas Patient URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BMI_Status__c</fullName>
        <formula>IF(
    Age__c &lt; 18,
    /* For Minors */
    IF(
        ISPICKVAL(Gender__c, &apos;Male&apos;),
        CASE(Age__c,
            17, IF(BMI__c &gt; 34, &apos;Over&apos;, IF(BMI__c &lt; 18, &apos;Under&apos;, &apos;Normal&apos;)),
            16, IF(BMI__c &gt; 32, &apos;Over&apos;, IF(BMI__c &lt; 17, &apos;Under&apos;, &apos;Normal&apos;)),
            15, IF(BMI__c &gt; 31, &apos;Over&apos;, IF(BMI__c &lt; 16, &apos;Under&apos;, &apos;Normal&apos;)),
            14, IF(BMI__c &gt; 30, &apos;Over&apos;, IF(BMI__c &lt; 16, &apos;Under&apos;, &apos;Normal&apos;)),
            13, IF(BMI__c &gt; 29, &apos;Over&apos;, IF(BMI__c &lt; 15, &apos;Under&apos;, &apos;Normal&apos;)),
            12, IF(BMI__c &gt; 29, &apos;Over&apos;, IF(BMI__c &lt; 15, &apos;Under&apos;, &apos;Normal&apos;)),
            11, IF(BMI__c &gt; 27, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            10, IF(BMI__c &gt; 26, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            9, IF(BMI__c &gt; 25, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            8, IF(BMI__c &gt; 23, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            7, IF(BMI__c &gt; 22, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            6, IF(BMI__c &gt; 22, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            5, IF(BMI__c &gt; 21, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            4, IF(BMI__c &gt; 21, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            3, IF(BMI__c &gt; 22, &apos;Over&apos;, IF(BMI__c &lt; 15, &apos;Under&apos;, &apos;Normal&apos;)),
            2, IF(BMI__c &gt; 23, &apos;Over&apos;, IF(BMI__c &lt; 15, &apos;Under&apos;, &apos;Normal&apos;)),
            &apos;Age Out of Range&apos;
        ),
        /* Female Minor */
        CASE(Age__c,
            17, IF(BMI__c &gt; 36, &apos;Over&apos;, IF(BMI__c &lt; 17, &apos;Under&apos;, &apos;Normal&apos;)),
            16, IF(BMI__c &gt; 35, &apos;Over&apos;, IF(BMI__c &lt; 17, &apos;Under&apos;, &apos;Normal&apos;)),
            15, IF(BMI__c &gt; 34, &apos;Over&apos;, IF(BMI__c &lt; 17, &apos;Under&apos;, &apos;Normal&apos;)),
            14, IF(BMI__c &gt; 32, &apos;Over&apos;, IF(BMI__c &lt; 17, &apos;Under&apos;, &apos;Normal&apos;)),
            13, IF(BMI__c &gt; 31, &apos;Over&apos;, IF(BMI__c &lt; 16, &apos;Under&apos;, &apos;Normal&apos;)),
            12, IF(BMI__c &gt; 30, &apos;Over&apos;, IF(BMI__c &lt; 15, &apos;Under&apos;, &apos;Normal&apos;)),
            11, IF(BMI__c &gt; 29, &apos;Over&apos;, IF(BMI__c &lt; 15, &apos;Under&apos;, &apos;Normal&apos;)),
            10, IF(BMI__c &gt; 27, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            9, IF(BMI__c &gt; 26, &apos;Over&apos;, IF(BMI__c &lt; 13, &apos;Under&apos;, &apos;Normal&apos;)),
            8, IF(BMI__c &gt; 25, &apos;Over&apos;, IF(BMI__c &lt; 13, &apos;Under&apos;, &apos;Normal&apos;)),
            7, IF(BMI__c &gt; 24, &apos;Over&apos;, IF(BMI__c &lt; 13, &apos;Under&apos;, &apos;Normal&apos;)),
            6, IF(BMI__c &gt; 23, &apos;Over&apos;, IF(BMI__c &lt; 13, &apos;Under&apos;, &apos;Normal&apos;)),
            5, IF(BMI__c &gt; 22, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            4, IF(BMI__c &gt; 22, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            3, IF(BMI__c &gt; 22, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            2, IF(BMI__c &gt; 23, &apos;Over&apos;, IF(BMI__c &lt; 14, &apos;Under&apos;, &apos;Normal&apos;)),
            &apos;Age Out of Range&apos;
        )
    ),
    /* For Adults */
    IF(
        BMI__c &gt; 40, 
        &apos;Over&apos;,
        IF(
            BMI__c &lt; 18.4, 
            &apos;Under&apos;,
            &apos;Normal&apos;
        )
    )

) + &quot; Range&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMI Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMI__c</fullName>
        <formula>(Weight__c / (Height__c * Height__c)) * 703</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Due_Alert__c</fullName>
        <formula>IF( Balance_Due__c &gt; 0,IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;Balance Due&quot;), &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <summarizedField>Opportunity.Opportunity_Balance_Due__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Validation__c</fullName>
        <description>Billing Address Validation Result</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address Validation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_TimeZone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing TimeZone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biocanic_External_Id__c</fullName>
        <description>The Patients&apos; unique Biocanic record id.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Biocanic External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Biocanic_Registration_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A one time link to allow the patient to register their Biocanic Account.</inlineHelpText>
        <label>Biocanic Registration URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Birthday_Month__c</fullName>
        <formula>CASE(MONTH(DateOfBirth__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bitly_Error_Message__c</fullName>
        <description>Contains Error Message Response from failed Bitly Link / QR code generation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bitly Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bitly_Is_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if there is an error with Bitly Link / QR code generation</description>
        <label>Bitly Is Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bitly_Link__c</fullName>
        <description>This is a shortened Bitly link used to generate a QR Code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bitly Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Bitly_QR_Code_Content_Version_Id__c</fullName>
        <description>This will be the content version id which then can be displayed on the account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bitly QR Code Content Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bitly_QR_Code__c</fullName>
        <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?size=200x200&amp;data=&quot; + &apos;https://shop.10xhealthsystem.com?utm_source=&apos; + Referral_Code__c , &apos;QR Code&apos;,240,320)</formula>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brain_fog_focus_and_memory_issues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brain fog, focus and memory issues?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Location__c</fullName>
        <label>Branch Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10X Health HQ</fullName>
                </value>
                <value>
                    <fullName>10X Health Concierge</fullName>
                </value>
                <value>
                    <fullName>10X Health Clinic (Scottsdale, AZ)</fullName>
                </value>
                <value>
                    <fullName>Telehealth</fullName>
                </value>
                <value>
                    <fullName>10X Health UBS Aventura, FL UBS</fullName>
                </value>
                <value>
                    <fullName>10X Health Naples, FL</fullName>
                </value>
                <value>
                    <fullName>10X Health Apex Las Vegas, NV</fullName>
                </value>
                <value>
                    <fullName>10X Health Palm Springs, CA</fullName>
                </value>
                <value>
                    <fullName>10X Health Beverly Hills, CA</fullName>
                </value>
                <value>
                    <fullName>10X Health New York, NY</fullName>
                </value>
                <value>
                    <fullName>10X Health Med Spa (Scottsdale, AZ)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VitalityConnect</fullName>
                </value>
                <value>
                    <fullName>HealthGAINS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CareCloud_Patient_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CareCloud Patient Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Care_Cloud_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Care Cloud Id</label>
        <length>245</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Cloud_Unique_Id__c</fullName>
        <formula>LEFT( RIGHT(Care_Cloud_Id__c, 38), 36 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care Cloud Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Rule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the Commission Rule Group that is assigned to the employee</description>
        <label>Commission Plan</label>
        <referenceTo>Commission_Rule_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultation_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consultation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consultation_Type__c</fullName>
        <label>Consultation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Converted_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count_of_ApprovedCharged_Transactions__c</fullName>
        <label>Count of ApprovedCharged Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMedicationsorSupplements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Medications or Supplements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employee_Credit_YTD__c</fullName>
        <formula>IF(
    YEAR(TODAY()) = 2025,
    CASE(
        Employee__c,
        &quot;005Rh0000044Umn&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Ivette Obregon */
        &quot;005Rh000002Ta3l&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Jillian Banayan */
        &quot;005Rh000005fUIe&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Veronica Berenguer */
        &quot;0055a000009fgtg&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Charles Ameer */
        &quot;005Rh000000UUv9&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Fabian Ubilla */
        &quot;005Rh000001B5IL&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Cameron Lee */
        &quot;005Rh00000121HB&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Brian Del Prado */
        &quot;005Rh000000Xn8P&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Mo Nizami */
        &quot;0055a00000AVTNV&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Chris Scott */
        &quot;0055a0000093Vuw&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Eli Mamann */
        &quot;0055a000009fnGH&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Celena Clark */
        &quot;0050b000004Xbuk&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Hamilton Rosenblatt */
        &quot;005Rh00000196gj&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Nyah Valera */
        &quot;005Rh0000025MtD&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Maria Daniela Maldonado */
        &quot;0055a000009fnJ6&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Devin DelValle */
        &quot;0055a00000AVMbB&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Gabriel Sole */
        &quot;0055a000009fn8S&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Heidi Rubio */
        &quot;0055a00000AVTdE&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Joseph White */
        &quot;0055a000009fmbx&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Julie Carda-Coleman */
        &quot;0055a000007fkiZ&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Marco Leal */
        &quot;005Rh000000eemj&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Natasha Torres */
        &quot;005Rh000002PMAf&quot;, 3000 - Used_Employee_Credit_YTD__c, /* Ivelisse Santos */
        2500 - Used_Employee_Credit_YTD__c /* Default for all other users */
    ),
    2500 - Used_Employee_Credit_YTD__c /* Default for all users in 2026+ */
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Employee Credit YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Digital_Key_Valid_Thru__c</fullName>
        <description>This will act as the expiration date of the Customer Digital Key that was sent to the customer. If they hadn&apos;t clicked it within this date, this will tell the end user that they need to contact support for a new link.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Digital Key Valid Thru</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Digital_Key__c</fullName>
        <description>This is used to authenticate users when they click a link within their emails to fill out specific customer information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Digital Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DEANumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DEA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Pharm_Automation_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to disable certain accounts to create Pharm Opportunity tasks upon Approving first Pharma Opportunity.

The field was not intended to be on a layout, used just as controlling field.</description>
        <inlineHelpText>If set to true the Account will not trigger e Pharm Opportunity tasks creation.</inlineHelpText>
        <label>Disable Pharmacy Task Automation</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>